# multisig-native

./: .gitignore  AGENTS.md  Dockerfile  README.md  build-verifiable.sh  package.json  pnpm-lock.yaml  verify.sh
program/: Cargo.toml
program/src/: errors.rs  lib.rs  processor.rs
program/src/instructions/: approve_transaction.rs  cancel_transaction.rs  change_threshold.rs  common.rs  create_multisig.rs  create_transaction.rs  execute_transaction.rs  mod.rs  propose_transaction.rs  set_owners.rs  set_owners_and_change_threshold.rs
program/src/state/: mod.rs  multisig.rs  transaction.rs
scripts/: build-verifiable.sh  verify.sh
tests/: accountTypeConfusionTest.ts  approveTransactionTest.ts  cancelTransactionTest.ts  changeThresholdTest.ts  createMultisigTest.ts  executeTransactionTest.ts  invalidInstructionTest.ts  proposeTransactionTest.ts  setOwnersAndChangeThresholdTest.ts  setOwnersTest.ts  test.ts  transactionAccountTest.ts  tsconfig.test.json
ts/: assignable.ts  index.ts  multisigDsl.ts
ts/instructions/: approveTransaction.ts  cancelTransaction.ts  changeThreshold.ts  createMultisig.ts  createTransaction.ts  executeTransaction.ts  index.ts  proposeTransaction.ts  setOwners.ts  setOwnersAndChangeThreshold.ts
ts/state/: multisig.ts  transaction.ts
