[package]
name = "multisig-native"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
# Pinned to avoid pulling in constant_time_eq ^0.4.2 which requires Rust edition 2024, incompatible with Agave platform-tools bundled Cargo 1.84.0
constant_time_eq = "=0.3.1"
shank = "0.4.8"
solana-program = "^2.0.4"
solana-security-txt = "1.1.1"
thiserror = "1.0.63"

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
# entrypoint! macro from solana-program uses cfg flags (custom-heap, custom-panic)
# that are not declared in its Cargo.toml, causing warnings on newer Rust versions
unexpected_cfgs = "allow"