[package]
name = "multisig-native"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.5"
shank = "0.4.8"
solana-program = "^2.2"
solana-sdk-ids = "^2.2"
solana-security-txt = "1.1.1"
solana-system-interface = "^1"
thiserror = "2"

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
# entrypoint! macro from solana-program uses cfg flags (custom-heap, custom-panic)
# that are not declared in its Cargo.toml, causing warnings on newer Rust versions
unexpected_cfgs = "allow"